# strawberry-resources

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yml  tests.yml
strawberry_resources/: __init__.py  exporter.py  queries.py  resolver.py  types.py
strawberry_resources/cli/: __init__.py  export.py  export_resources.py
strawberry_resources/integrations/: __init__.py  base.py  django.py
strawberry_resources/utils/: inspect.py  pyutils.py
tests/: django_settings.py  test_django.py  test_exporter.py  test_queries.py  test_resolver.py  utils.py
tests/app/: models.py
tests/data/: base.json  no_duplicated_types.json  no_nulls.json  no_nulls_no_duplicated_types.json
